Added Tween class w/ Lua Bindings
* Easing functions are based on the Easing.as functions by Robert Penner.

--- a/SCION_UTILITIES/CMakeLists.txt
+++ b/SCION_UTILITIES/CMakeLists.txt
@@ -8,7 +8,10 @@ add_library(SCION_UTILITIES
     "include/ScionUtilities/ScionUtilities.h"
 	"src/ScionUtilities.cpp"
 	"include/ScionUtilities/HelperUtilities.h"
- "include/ScionUtilities/MathUtilities.h")
+	"include/ScionUtilities/MathUtilities.h"
+	"include/ScionUtilities/Tween.h"
+	"src/Tween.cpp"
+)
 
 target_include_directories(
     SCION_UTILITIES PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
