Handle Relative ImGui Position
* When getting the world position from the mouse coordinates, we need to take into account the ImGui docking, window size, window position, etc.
* This was first created before the editor was started, so we did not factor that in.
* Added a new wrapper class for the mouse bindings when in editor.
* This will factor in the relative mouse position and the framebuffer size.
* Also, in the ScreenCoordsToWorld, we were not scaling the position.

--- a/SCION_EDITOR/CMakeLists.txt
+++ b/SCION_EDITOR/CMakeLists.txt
@@ -94,7 +94,10 @@ add_executable(SCION_EDITOR
 	"src/editor/loaders/ProjectLoader.cpp"
 
 	${APP_ICON_RESOURCE}
- "src/editor/utilities/fonts/editor_fonts.h")
+	"src/editor/utilities/fonts/editor_fonts.h"
+	"src/editor/scripting/EditorCoreLuaWrappers.h"
+	"src/editor/scripting/EditorCoreLuaWrappers.cpp"
+)
 
 target_include_directories(
     SCION_EDITOR PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
