Adjusted Lua function/variables formatting
* Adjusted the bound lua variables and functions to use camelCase rather than underscore_case
* Created a helper function to create ReadOnly tables
* Changed the math constants to be a read only table.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,9 @@ if(WIN32)
 endif()
 
 add_compile_definitions(IN_SCION_EDITOR)
-add_compile_definitions(SOL_ALL_SAFETIES_ON)
+
+add_compile_definitions(SOL_ALL_SAFETIES_ON=1)
+add_compile_definitions(SOL_EXCEPTIONS_ALWAYS_UNSAFE=1)
 
 find_package(glad CONFIG REQUIRED)
 find_package(soil2 CONFIG REQUIRED)
