Fix Multi-Viewports and Window resizing
* Currently the vcpkg version of imgui[docking-experimental] is not up to date with the latest changes and no longer has the sdl2-bindings version.
* Removed vcpkg ImGui dependency
* Added latest imgui as a thirdparty library and build with the editor.
* Fixed main window being resized when undocked ImGui window is resized.
  * We were resizing the main window based on resize events.
  * ImGui would trigger a resize event for the separate windows.
  * Added check to ensure we are only handling the main window resize.
* Adjusted position for hub gui because this is different in multi-viewport.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,7 +47,11 @@ add_compile_definitions(SOL_EXCEPTIONS_ALWAYS_UNSAFE=1)
 
 find_package(glad CONFIG REQUIRED)
 find_package(soil2 CONFIG REQUIRED)
-find_package(imgui CONFIG REQUIRED)
+# Removed ImGui from Configs for now.
+# Current VCPKG docking version is not up to date with
+# Needed SDL2 changes for multi-viewports.
+# Added entirely in the thirdparty/imgui folder.
+# find_package(imgui CONFIG REQUIRED)
 find_package(fmt CONFIG REQUIRED)
 find_package(SDL2 CONFIG REQUIRED)
 find_package(SDL2_mixer CONFIG REQUIRED)
