Add UIComponent Handling for Gizmos
* Added flag to the Gizmo Abstract class that controls if the positioning if the selected entity has a UIComponent.
* Objects that have a UI component, use a different camera.
* Added a getter for the RenderUISystem's camera.
* This camera is used when the gizmo's selected entity has a UI component.
* Created new AddComponentEvent
* Gizmo now has a handler and checks to see if the component added is a UI component.

--- a/SCION_EDITOR/CMakeLists.txt
+++ b/SCION_EDITOR/CMakeLists.txt
@@ -88,6 +88,7 @@ add_executable(SCION_EDITOR
 	
 	# Events
 	"src/editor/events/EditorEventTypes.h"
+	
 	"src/editor/hub/Hub.cpp"
 	"src/editor/hub/Hub.h"
 	
@@ -99,7 +100,7 @@ add_executable(SCION_EDITOR
 	"src/editor/scripting/EditorCoreLuaWrappers.h"
 	"src/editor/scripting/EditorCoreLuaWrappers.cpp"
 	
-)
+ "src/editor/events/EditorEventTypes.cpp")
 
 target_sources(
 	SCION_EDITOR PRIVATE
