Added Directory Watcher Class
* Added the Directory Watcher class and completed the windows implementation.
* Added Directory Watcher to Script Display to handle lists.
* Adjusted Logger class log functions to use a mutex. To prevent potential data races.
* Adjust utility function GetSubString

--- a/SCION_FILESYSTEM/CMakeLists.txt
+++ b/SCION_FILESYSTEM/CMakeLists.txt
@@ -21,6 +21,10 @@ add_library(SCION_FILESYSTEM
 	# Process
 	"include/ScionFilesystem/Process/FileProcessor.h"
 	${FILE_PROCESSOR_PATH}
+
+	# Utilities
+	"include/ScionFilesystem/Utilities/DirectoryWatcher.h"
+	"src/DirectoryWatcher.cpp"
 )
 
 target_include_directories(
