Added lua Script Compiler Class
* Added the ScriptCompiler class for packaging lua scripts into a luac bytecode file.
* This will gather all of the scripts and call the luac.exe cmd line program to generate the luac file for us.
* Added new filesystem utility to run a command and capture the output for logging.

--- a/SCION_EDITOR/CMakeLists.txt
+++ b/SCION_EDITOR/CMakeLists.txt
@@ -45,6 +45,8 @@ add_executable(SCION_EDITOR
 	"src/editor/displays/AssetDisplayUtils.cpp"
 	"src/editor/displays/ScriptDisplay.h"
 	"src/editor/displays/ScriptDisplay.cpp"
+	"src/editor/displays/PackageDisplay.h"
+	"src/editor/displays/PackageDisplay.cpp"
 
     # Editor Systems
     "src/editor/systems/GridSystem.h" 
@@ -102,7 +104,10 @@ add_executable(SCION_EDITOR
 	${APP_ICON_RESOURCE}
 	"src/editor/scripting/EditorCoreLuaWrappers.h"
 	"src/editor/scripting/EditorCoreLuaWrappers.cpp"
- "src/editor/displays/PackageDisplay.h" "src/editor/displays/PackageDisplay.cpp")
+	
+	# Packaging
+	"src/editor/packaging/ScriptCompiler.h"
+	"src/editor/packaging/ScriptCompiler.cpp")
 
 target_sources(
 	SCION_EDITOR PRIVATE
