Added IconReplacer Class
* The icon replacer class will be used to replace the game executable icon when packaging the game.
* Currently only the windows implementation is completed, linux not currently supported for icon replacement.

--- a/SCION_EDITOR/CMakeLists.txt
+++ b/SCION_EDITOR/CMakeLists.txt
@@ -107,7 +107,10 @@ add_executable(SCION_EDITOR
 	
 	# Packaging
 	"src/editor/packaging/ScriptCompiler.h"
-	"src/editor/packaging/ScriptCompiler.cpp")
+	"src/editor/packaging/ScriptCompiler.cpp"
+	"src/editor/packaging/IconReplacer.h"
+	"src/editor/packaging/IconReplacer.cpp"
+)
 
 target_sources(
 	SCION_EDITOR PRIVATE
