Refactor Project Settings and Save data
* Removed old SaveProject struct and added new ProjectInfo class.
* The SaveProject struct was not very extendable and using the string paths were combersome.
* Completely changed how we work with project paths using the project Info class.
* Added the ability to convert .ico files into opengl textures.
* Added new Project Settings Display.
* Added helper functions for checking for reserved system paths and default project paths so we don't accidentally delete folders or files.
* Removed Project Settings from menu display tabs.
* Removed setting icons from package display, this is handle in project settings display now.
* Added new IconInfo file so we can use the ICONDIR struct and bitmap information.
* Adjusted the entire project to accommodate the ProjectInfo -> SaveProject changes.
* Added new Physics utility to get just the mapped filter strings as a vector.
* Added new functionality to texture loader so we can load icons.
* changed constexpr const char* to be string_views.

--- a/SCION_CORE/CMakeLists.txt
+++ b/SCION_CORE/CMakeLists.txt
@@ -7,7 +7,8 @@ add_library(SCION_CORE
     "include/Core/CoreUtilities/FollowCamera.h"
     "src/CoreUtilities/FollowCamera.cpp"
 	"include/Core/CoreUtilities/EngineShaders.h"
-	"include/Core/CoreUtilities/SaveProject.h"
+	"include/Core/CoreUtilities/ProjectInfo.h"
+	"src/CoreUtilities/ProjectInfo.cpp"
 	"include/Core/CoreUtilities/Prefab.h"
 	"src/CoreUtilities/Prefab.cpp"
 
