--- a/SCION_UTILITIES/CMakeLists.txt
+++ b/SCION_UTILITIES/CMakeLists.txt
@@ -11,6 +11,7 @@ add_library(SCION_UTILITIES
 	"include/ScionUtilities/MathUtilities.h"
 	"include/ScionUtilities/Tween.h"
 	"src/Tween.cpp"
+	"include/ScionUtilities/ThreadPool.h"
 )
 
 target_include_directories(
