Start the Packager Class
* Started the Packager Class. This will be used to export the games out of the editor.
* Added the ability to export scenes to lua.
* Added Component serialization and deserialization to lua.
* Added Saving tiles and game objects to lua.
* Fixed issue in AssetPackager for asset names not being the same as the file name.

--- a/SCION_EDITOR/CMakeLists.txt
+++ b/SCION_EDITOR/CMakeLists.txt
@@ -118,7 +118,7 @@ add_executable(SCION_EDITOR
 	"src/editor/packaging/IconReplacer.cpp"
 	"src/editor/packaging/AssetPackager.h"
 	"src/editor/packaging/AssetPackager.cpp"
-)
+ "src/editor/packaging/Packager.h" "src/editor/packaging/Packager.cpp")
 
 target_sources(
 	SCION_EDITOR PRIVATE
