--- a/SCION_FILESYSTEM/CMakeLists.txt
+++ b/SCION_FILESYSTEM/CMakeLists.txt
@@ -40,3 +40,5 @@ target_link_libraries(
 target_compile_options(
 	SCION_FILESYSTEM PRIVATE $<$<COMPILE_LANGUAGE:CXX>:${CXX_COMPILE_FLAGS}>
 )
+
+target_precompile_headers(SCION_FILESYSTEM REUSE_FROM PCH)
