Started the Editor State
* The editor state controls and keeps track of current editor settings.
* Controls which displays are currently enabled/disabled.
* Saves the current state to a file upon close and loaded when loading the project.
* Added some more polish and cleanup as well.

--- a/SCION_EDITOR/CMakeLists.txt
+++ b/SCION_EDITOR/CMakeLists.txt
@@ -18,6 +18,8 @@ add_executable(SCION_EDITOR
 	"src/editor/utilities/fonts/IconsFontAwesome5.h"
 	"src/editor/utilities/imgui/Gui.h"
 	"src/editor/utilities/imgui/Gui.cpp"
+	"src/editor/utilities/EditorState.h"
+	"src/editor/utilities/EditorState.cpp"
 
     # Editor Displays
     "src/editor/displays/IDisplay.h"
@@ -118,7 +120,9 @@ add_executable(SCION_EDITOR
 	"src/editor/packaging/IconReplacer.cpp"
 	"src/editor/packaging/AssetPackager.h"
 	"src/editor/packaging/AssetPackager.cpp"
- "src/editor/packaging/Packager.h" "src/editor/packaging/Packager.cpp")
+	"src/editor/packaging/Packager.h"
+	"src/editor/packaging/Packager.cpp"
+)
 
 target_compile_definitions(SCION_EDITOR PUBLIC IN_SCION_EDITOR)
 
