Started TiledMapImporter and Bug Fixes
* Started the implementation of the TiledMapImporter.
* This will take maps created using the Tiled MapEditor and Import them into Scion2D as a new Scene.
* The maps must be in lua format.
* Added the fontSize and pixel art optionals to S2DAsset. We were assuming these in the runtime rather than loading them.
* Add Color Edit for text in draw components.
* Added saving fonts in project loader.
* Added filepath to font class.
* Cleaned up menu display.

--- a/SCION_EDITOR/CMakeLists.txt
+++ b/SCION_EDITOR/CMakeLists.txt
@@ -122,7 +122,7 @@ add_executable(SCION_EDITOR
 	"src/editor/packaging/AssetPackager.cpp"
 	"src/editor/packaging/Packager.h"
 	"src/editor/packaging/Packager.cpp"
-)
+ "src/editor/loaders/TiledMapImporter.h" "src/editor/loaders/TiledMapImporter.cpp")
 
 target_compile_definitions(SCION_EDITOR PUBLIC IN_SCION_EDITOR)
 
