Update Entity Class Registry
* Adjusted the Entity Class to take a pointer to a registry rather than a reference.
* Added Copy ctor, Adjusted Copy Assignment Operator, and added both move ctor and assignment operator.
* Changed everywhere in the codebase that was using a reference for the Entity.
* Adjusted CMakeLists to use PROJECT_SOURCE_DIR rather than ../

--- a/crash_reporter/CMakeLists.txt
+++ b/crash_reporter/CMakeLists.txt
@@ -4,21 +4,21 @@ target_include_directories(
     SCION_CRASH_REPORTER PUBLIC
 	${CMAKE_CURRENT_SOURCE_DIR}/src
 	PRIVATE
-	../thirdparty/imgui/
-	../thirdparty/imgui/imgui_backends
-	../thirdparty/imgui/imgui_cpp
+	${PROJECT_SOURCE_DIR}/thirdparty/imgui/
+	${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui_backends
+	${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui_cpp
 )
 
 target_sources(
 	SCION_CRASH_REPORTER PRIVATE
-	../thirdparty/imgui/imgui.cpp
-	../thirdparty/imgui/imgui_demo.cpp
-	../thirdparty/imgui/imgui_draw.cpp
-	../thirdparty/imgui/imgui_tables.cpp
-	../thirdparty/imgui/imgui_widgets.cpp
-	../thirdparty/imgui/imgui_backends/imgui_impl_opengl3.cpp
-	../thirdparty/imgui/imgui_backends/imgui_impl_sdl2.cpp
-	../thirdparty/imgui/imgui_cpp/imgui_stdlib.cpp
+	${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui.cpp
+	${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui_demo.cpp
+	${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui_draw.cpp
+	${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui_tables.cpp
+	${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui_widgets.cpp
+	${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui_backends/imgui_impl_opengl3.cpp
+	${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui_backends/imgui_impl_sdl2.cpp
+	${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui_cpp/imgui_stdlib.cpp
 )
 
 target_link_libraries(
