--- a/SCION_EDITOR/CMakeLists.txt
+++ b/SCION_EDITOR/CMakeLists.txt
@@ -130,23 +130,23 @@ target_compile_definitions(SCION_EDITOR PUBLIC IN_SCION_EDITOR)
 
 target_sources(
 	SCION_EDITOR PRIVATE
-	../thirdparty/imgui/imgui.cpp
-	../thirdparty/imgui/imgui_demo.cpp
-	../thirdparty/imgui/imgui_draw.cpp
-	../thirdparty/imgui/imgui_tables.cpp
-	../thirdparty/imgui/imgui_widgets.cpp
-	../thirdparty/imgui/imgui_backends/imgui_impl_opengl3.cpp
-	../thirdparty/imgui/imgui_backends/imgui_impl_sdl2.cpp
-	../thirdparty/imgui/imgui_cpp/imgui_stdlib.cpp
+	${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui.cpp
+	${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui_demo.cpp
+	${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui_draw.cpp
+	${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui_tables.cpp
+	${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui_widgets.cpp
+	${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui_backends/imgui_impl_opengl3.cpp
+	${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui_backends/imgui_impl_sdl2.cpp
+	${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui_cpp/imgui_stdlib.cpp
 )
 
 target_include_directories(
     SCION_EDITOR PUBLIC
 	${CMAKE_CURRENT_SOURCE_DIR}/src
 	PRIVATE
-	../thirdparty/imgui
-	../thirdparty/imgui/imgui_backends
-	../thirdparty/imgui/imgui_cpp
+	${PROJECT_SOURCE_DIR}/thirdparty/imgui
+	${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui_backends
+	${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui_cpp
 )
 
 target_link_libraries(
